fix flavour flex wrap

--- a/src/app/user/instance-new/instance-flavour-select.component.scss
+++ b/src/app/user/instance-new/instance-flavour-select.component.scss
@@ -9,6 +9,7 @@
     width: 100%;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     column-gap: 1rem;
 
     ul {
